fixed nav bar but not responsive

--- a/public/css/addPost/style.css
+++ b/public/css/addPost/style.css
@@ -85,8 +85,9 @@ a {
 	text-decoration: none;
 	width: 200px;
 	text-align: center;
-	margin: 10px;
-	padding: 10px;
+	margin: 5px;
+	padding: 5px;
+	padding-left: 30px;
 }
 
 li:hover {
